install/k8s/objects.yaml
apiVersion: v1
items:
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    labels:
      app: http-echo
    name: http-echo
  spec:
    replicas: 1
    revisionHistoryLimit: 5
    selector:
      matchLabels:
        app: http-echo
    strategy:
      rollingUpdate:
        maxSurge: 0
        maxUnavailable: 1
      type: RollingUpdate
    template:
      metadata:
        labels:
          app: http-echo
        name: http-echo
      spec:
        automountServiceAccountToken: false
        containers:
        - image: tjamet/http-echo
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /headerdump
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: http-echo
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /headerdump
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    labels:
      app: http-echo
    name: http-echo
  spec:
    rules:
    - host: http-echo.example.com
      http:
        paths:
        - backend:
            serviceName: http-echo
            servicePort: 80
          path: /
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: http-echo
    name: http-echo
  spec:
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
    selector:
      app: http-echo
    sessionAffinity: None
    type: ClusterIP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
